k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: gameplay-namespace
spec:
  selector:
    app: gameplay-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
